# vdp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  plan.md
colortest/: Cargo.toml
colortest/src/: main.rs
imgconv/: Cargo.toml
imgconv/src/: color.rs  imgconv.rs  main.rs
rtl/: active_bram.sv  double_buffer.sv  fp_div.sv  fp_div_tb.sv  hdmi.sv  hdmi.v  i2s_transmitter.sv  linebuffer_bram.sv  main.sv  palette.hex  palette_bram.sv  pix_pipeline.sv  pixel_doubler.sv  pixel_doubler_tb.sv  pixel_quadrupler.sv  pixel_quadrupler_tb.sv  sdram.sv  shift_aligner.sv  skid_buffer.sv  smoldvi.v  smoldvi_clock_driver.v  smoldvi_fast_gearbox.v  smoldvi_serialiser.v  smoldvi_serializer.v  smoldvi_tmds_encode.v  sprite_bram.sv  sprite_controller.sv  sprite_matcher.sv  sprite_types.sv  sprites.hex  test_pattern.sv  testpal.hex  tile_bram.sv  tile_map.hex  tile_map_bram.sv  tiles.hex  tmds_encoder.sv  vdp.sv  vga.sv  ym2149.sv
rtl/fpgacpu_ca/: cdc_bit_synchronizer.sv  cdc_pulse_synchronizer_2phase.sv  pulse_generator.sv  register.sv  register_toggle.sv
sim/: Makefile  main_test.cpp  sdram.cpp  sdram.h  top_test.sv
ulx3s/: pll.v  top_ulx3s.sv  ulx3s.mk  ulx3s_v20.lpf
up5k/: icesugar.pcf  pll.v  top_up5k.sv  up5k.mk
vdpemu/: Cargo.toml
vdpemu/src/: main.rs
