[package]
name = "imgconv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
hex = "0.4.3"
image = "0.25.5"
oklab = "1.1.2"
kmeans = "1.1.0"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
pathfinding = "4.14.0"
